# seedwing-enforcer

./: .eslintrc.yaml  .gitignore  Cargo.toml  README.md  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: ci.yaml  release.yaml
assets/: styles.css
cli/: Cargo.toml
cli/src/: cli.rs  main.rs  util.rs
cli/src/command/: lsp.rs  mod.rs  once.rs
client/: package.json  pnpm-lock.yaml  tsconfig.json
client/src/: data.ts  extension.ts
common/: Cargo.toml
common/src/: config.rs  highlight.rs  lib.rs
common/src/enforcer/: cache.rs  dependency.rs  mod.rs  seedwing.rs
common/src/enforcer/seedwing/: mod.rs  render.rs
common/src/enforcer/source/: detect.rs  mod.rs
common/src/enforcer/source/cargo/: mod.rs
common/src/enforcer/source/maven/: mod.rs
common/src/enforcer/source/sbom/: maven.rs
common/src/utils/: mod.rs  progress.rs  projects.rs  rationale.rs
common/src/utils/pool/: tokio.rs  wasm.rs
common/test-data/: .enforcer.yaml  enforcer.dog
lsp-common/: Cargo.toml
lsp-common/src/: lib.rs
lsp-common/src/backend/: mod.rs  notification.rs  progress.rs  workspace.rs
lsp-common/src/backend/project/: file.rs  mod.rs  publisher.rs
lsp-wasi/: Cargo.toml  README.md
lsp-wasi/src/: lib.rs
seedwing-enforcer/: Cargo.toml
seedwing-enforcer-cli/: Cargo.toml
seedwing-enforcer-cli/src/: main.rs
seedwing-enforcer-cli/src/command/: lsp.rs
seedwing-enforcer-lsp/: Cargo.toml
seedwing-enforcer-lsp-common/: Cargo.toml
seedwing-enforcer-lsp-common/src/backend/: workspace.rs
seedwing-enforcer-lsp-common/src/backend/project/: file.rs  mod.rs
seedwing-enforcer-lsp-wasi/: Cargo.toml  README.md
seedwing-enforcer-lsp-wasi/.cargo/: config
seedwing-enforcer-lsp-wasm/: Cargo.toml
seedwing-enforcer-lsp-wasm/.cargo/: config
seedwing-enforcer-lsp/src/: config.rs  main.rs  protocol.rs
seedwing-enforcer-lsp/src/backend/: mod.rs  notification.rs
seedwing-enforcer-lsp/src/backend/project/: file.rs
seedwing-enforcer-lsp/src/enforcer/source/maven/: mod.rs  pom.rs
seedwing-enforcer-vscode-addon/: .gitignore  .vscodeignore  Makefile  package-lock.json  package.json  tsconfig.json
seedwing-enforcer-vscode-addon/src/: cli.ts  deps.ts  extension.ts  report.ts  server.ts  version.ts
seedwing-enforcer/src/enforcer/: seedwing.rs
seedwing-enforcer/src/enforcer/source/sbom/: maven.rs
seedwing-enforcer/src/utils/: mod.rs
seedwing-enforcer/src/utils/pool/: mod.rs
src/: config.rs  highlight.rs  main.rs
src/backend/: mod.rs  notification.rs  project.rs  workspace.rs
src/backend/project/: file.rs  mod.rs  publisher.rs
src/enforcer/: dependency.rs  mod.rs  seedwing.rs
src/enforcer/source/: mod.rs
src/enforcer/source/maven/: mod.rs
src/enforcer/source/sbom/: maven.rs  mod.rs
src/utils/: mod.rs  rationale.rs
test-data/: pom1.xml
vscode-addon/: .gitignore  .vscodeignore  Makefile  package-lock.json  package.json  tsconfig.json  webpack.config.js
vscode-addon/assets/: styles.css
vscode-addon/src/: cli.ts  data.ts  deps.ts  extension.ts  progress.ts  version.ts
