[workspace]
members = [
    "common",
    "cli",
    "lsp-common",
]
exclude = [
    "lsp-wasi"
]

[patch.crates-io]
#seedwing-policy-engine = { path = "../seedwing-policy/engine" }
seedwing-policy-engine = { git = "https://github.com/seedwing-io/seedwing-policy", rev = "2d2a15099cceb0ec57148fd86c150669ee4a40ae" }
