[workspace]
members = [
    "common",
    "cli",
    "lsp-common",
]
exclude = [
    "lsp-wasi"
]

[patch.crates-io]
#seedwing-policy-engine = { path = "../seedwing-policy/engine" }
seedwing-policy-engine = { git = "https://github.com/seedwing-io/seedwing-policy", rev = "5e29d20f46fa633534f36bffe5744a3bf7b8e185" }
