[workspace]
members = [
    "common",
    "cli",
    "lsp-common",
]
exclude = [
    "lsp-wasi"
]

[patch.crates-io]
#seedwing-policy-engine = { path = "../seedwing-policy/engine" }
seedwing-policy-engine = { git = "https://github.com/seedwing-io/seedwing-policy", rev = "c36a4776426bb5884fd5f6f0bc6c4f06bc7ed0c0" }
