[package]
name = "seedwing-enforcer-cli"
version = "0.1.0"
edition = "2021"
rust-version = "1.66"

[dependencies]
anyhow = "1"
async-trait = "0.1.64"
cargo_metadata = "0.15.3"
clap = { version = "4.1.7", features = ["derive", "env"] }
env_logger = "0.10.0"
log = "0.4.14"
thiserror = "1"
tokio = { version = "1.17.0", features = ["full"] }
tower-lsp = { version = "0.19.0" }

seedwing-enforcer-common = { path = "../common" }
seedwing-enforcer-lsp-common = { path = "../lsp-common" }
seedwing-policy-engine = { version = "0.1.0-alpha.9", default-features = false, features = [] }

serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"

openssl = { version = "*", optional = true }

[features]
vendored = ["openssl/vendored"]

[[bin]]
name = "senf"
path = "src/main.rs"