[package]
name = "seedwing-enforcer-common"
version = "0.1.0"
edition = "2021"
rust-version = "1.66"

[dependencies]
anyhow = "1"
async-trait = "0.1.64"
cargo-lock = "8.0.3"
cargo_metadata = "0.15.3"
cyclonedx-bom = "0.4.0"
log = "0.4.14"
lsp-types = { version = "0.94.0" }
quick-xml = { version = "0.27", features = ["serialize"] }
ropey = "1.6.0"
roxmltree = "0.18.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.78"
serde_yaml = "0.9.17"
thiserror = "1"
tokio = { version = "1.17.0", features = [] }
url = "2.3.1"
which = "4"

seedwing-policy-engine = { version = "0.1.0-alpha.9", default-features = false, features = [] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
tokio-util = { version = "0.7.4", features = ["rt"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.84"
wasm-bindgen-futures = "0.4.34"
tokio = { version = "1.17.0", features = ["sync"] }

[dev-dependencies]
env_logger = "0.10.0"
