[package]
name = "seedwing-enforcer-lsp-wasi"
version = "0.1.0"
edition = "2021"
rust-version = "1.66"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
seedwing-enforcer-common = { path = "../common" }
seedwing-enforcer-lsp-common = { path = "../lsp-common" }
tower-lsp = { version = "0.19.0", default-features = false, features = ["runtime-agnostic"] }

wasm-bindgen = "0.2.84"
wasm-bindgen-futures = { version = "0.4.34", features = ["futures-core-03-stream"] }
futures = "0.3.26"
console_error_panic_hook = "0.1.7"
js-sys = "0.3.61"
#wasm-streams = "0.3.0"

# configure transient dependencies
getrandom = { version = "*", features = ["js"] }

[dependencies.web-sys]
version = "0.3.61"
features = [
    "console",
    "HtmlTextAreaElement",
    "ReadableStream",
    "WritableStream",
]


[patch.crates-io]
seedwing-policy-engine = { git = "https://github.com/seedwing-io/seedwing-policy", rev = "bb239416993bf81a141fe5635693cb4a116e5c97" }