[package]
name = "seedwing-enforcer-lsp-wasi"
version = "0.1.0"
edition = "2021"
rust-version = "1.66"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = "z"

[lib]
crate-type = ["cdylib"]

[dependencies]
seedwing-enforcer = { path = "../seedwing-enforcer" }
#seedwing-enforcer-lsp-common = { path = "../seedwing-enforcer-lsp-common" }
tower-lsp = { version = "0.18.0", default-features = false, features = ["runtime-agnostic"] }

# configure transient dependencies
getrandom = { version = "*", features = ["js"] }

[patch.crates-io]
seedwing-policy-engine = { git = "https://github.com/seedwing-io/seedwing-policy", rev = "53583128136703de9b29a88f5cfdf4e3ae015f67" }